second commit finished header section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Simpleflex</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <!-- HEADER STARTS -->
+    <header>
+        <div class="wrapper wrapHeader">
+            <div class="logoHeader">
+                <img src="images/logo.png" alt="simpleflex logo in cursive script">
+            </div>
+            <nav class="headerNav">
+                <ul>
+                    <li><a href="#home" class="homeA">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact" class="lastA">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- HEADER ENDS -->
+    <main>
+        <!-- TOP HOME SECTION STARTS (yellow) -->
+        <section id="home">
+            <div class="wrapper">
+                <div class="homeLeft">
+                    <h1><span>Everthing</span> you need</h1>
+                    <p class="desc">Simplex is best solution for you, so you can present your business and services properly</p>
+                    <a href="3" class="buttonWhite">Purchase this theme</a>
+                </div>
+                <div class="homeRight">
+                    <img src="images/mockup-1.png" alt="drawing of a white iPhone with the Simpleflex about page displayed">
+                </div>
+            </div>
+        </section>
+        <!-- yellow section ends -->
+        <section id="about">
+            <div class="wrapper">
+                <h2>About us</h2>
+                <p class="desc">Sanctus sea sed takimata ut vero voluptua. Stet clita kasd gubergren, no sea takimata sanctus est.</p>
+            </div>
+        </section>
+        <section class="skills">
+            <div class="wrapper"></div>
+        </section>
+        <section class="projects">
+            <div class="wrapper"></div>
+        </section>
+        <section class="team">
+            <div class="wrapper"></div>
+        </section>
+        <section id="portfolio"></section>
+        <section id="blog">
+            <div class="wrapper"></div>
+        </section>
+        <section class="location">
+            <div class="sectionTop">
+                <div class="wrapper"></div>
+                <!-- ^maybe? -->
+            </div>
+            <div class="sectionBottom"></div>
+        </section>
+        <section id="contact">
+            <div class="wrapper"></div>
+        </section>
+    </main>
+    <footer>
+        <div class="wrapper">
+            <div class="footerTop"></div>
+            <div class="footerCopy"></div>
+        </div>
+    </footer>
 </body>
 </html>
