Finished header, reworked sizing for 100% zoom on my screen

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simpleflex</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Raleway:300,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             </div>
             <nav class="headerNav">
                 <ul>
-                    <li><a href="#home" class="homeA">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#blog">Blog</a></li>
@@ -33,11 +33,13 @@
             <div class="wrapper">
                 <div class="homeLeft">
                     <h1><span>Everthing</span> you need</h1>
-                    <p class="desc">Simplex is best solution for you, so you can present your business and services properly</p>
-                    <a href="3" class="buttonWhite">Purchase this theme</a>
+                    <p class="descHead">Simplex is best solution for you, so you can present your business and services properly</p>
+                    <a href="#" class="buttonWhite">Purchase this theme</a>
                 </div>
                 <div class="homeRight">
-                    <img src="images/mockup-1.png" alt="drawing of a white iPhone with the Simpleflex about page displayed">
+                    <div class="homeImgContainer">
+                        <img src="images/mockup-1.png" alt="drawing of a white iPhone with the Simpleflex about page displayed">
+                    </div>
                 </div>
             </div>
         </section>
@@ -46,10 +48,66 @@
             <div class="wrapper">
                 <h2>About us</h2>
                 <p class="desc">Sanctus sea sed takimata ut vero voluptua. Stet clita kasd gubergren, no sea takimata sanctus est.</p>
+                <div class="iconBlockContainer">
+                    <div class="iconBlock first">
+                       <div class="iconImg">
+                           <img src="images/icon-modern.png" alt="curved arrow icon">
+                        </div> 
+                        <h4>Modern</h4>
+                        <p>Seiam nonumy eirmod tempor invidunt ut labore et dolore magna.</p>
+                    </div>
+                    <div class="iconBlock second">
+                        <div class="iconImg">
+                            <img src="images/icon-simple.png" alt="orange flag icon">
+                        </div>
+                        <h4>Simple</h4>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr sed diam.</p>
+                    </div>
+                    <div class="iconBlock third">
+                        <div class="iconImg">
+                            <img src="images/icon-flexible.png" alt="computer monitor icon">
+                        </div>
+                        <h4>Flexible</h4>
+                        <p>Quis aute iure reprehenderit voluptate velit esse cillum dolore. eu fugiat nulla pariatur.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="skills">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <h2>Our skills</h2>
+                <p class="desc">AIR is focusing on Web Design / WP Development / HTML Integration</p>
+               <div class="skillsBottom">
+                   <div class="skillBlock">
+                       <div class="skillImg">
+                            <img src="images/circle-1.png" alt="">
+                       </div>
+                       <h4>Web Design</h4>
+                       <p>Excepteur sint obcaecat cupiditat non proident sunt in culpa.</p>
+                   </div>
+                   <div class="skillBlock">
+                        <div class="skillImg">
+                            <img src="images/circle-2.png" alt="">
+                        </div>
+                        <h4>WordPress</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, magni.</p>
+                   </div>
+                   <div class="skillBlock">
+                        <div class="skillImg">
+                            <img src="images/circle-3.png" alt="">
+                        </div> 
+                        <h4>jQuery</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, quia.</p>
+                   </div>
+                   <div class="skillBlock">
+                        <div class="skillImg">
+                            <img src="images/circle-4.png" alt="">
+                        </div>
+                        <h4>HTML/CSS</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, culpa.</p>
+                   </div>
+               </div>
+            </div>
         </section>
         <section class="projects">
             <div class="wrapper"></div>
