finished up to projects partial

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </div>
             </div>
         </section>
-        <!-- yellow section ends -->
+        <!-- yellow HOME section ends -->
+        <!-- ABOUT SECTION BEGINS -->
         <section id="about">
             <div class="wrapper">
                 <h2>About us</h2>
@@ -73,10 +74,12 @@
                 </div>
             </div>
         </section>
+        <!-- ABOUT SECTION ENDS -->
+        <!-- SKILLS SECTION BEGINS -->
         <section class="skills">
             <div class="wrapper">
                 <h2>Our skills</h2>
-                <p class="desc">AIR is focusing on Web Design / WP Development / HTML Integration</p>
+                <p class="desc">AIR is focusing on <span class="lowerDesc">Web Design / WP Development / HTML Integration</span></p>
                <div class="skillsBottom">
                    <div class="skillBlock">
                        <div class="skillImg">
@@ -108,13 +111,74 @@
                    </div>
                </div>
             </div>
+            <!-- BOTTOM RED SKILLS QUOTE SECTION -->
+            <div class="skillsQuote">
+                <div class="quote">
+                    <div class="quoteMark quoteMarkLeft">
+                        <img src="images/leftQuote.png" alt="white block-style opening quotation marks">
+                    </div>
+                    <h3>Design to express, not to impress.</h3>
+                    <p class="author"> - John Tanedo - </p>
+                    <div class="quoteMark quoteMarkRight">
+                        <img src="images/rightQuote.png" alt="white block-style closing quotation marks">
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- SKILLS SECTION ENDS  -->
+        <!-- PROJECTS SECTION BEGINS -->
         <section class="projects">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <h2>Latest projects</h2>
+                <p class="desc">Sanctus sea sed takimata ut vero voluptua. Stet clita kasd gubergren, no sea takimata sanctus est.</p>
+                <div class="projContainer">
+                    <img src="images/mockup-2.png" alt="picture of a browser window open to a web design site">
+                </div>
+            </div>
         </section>
+        <!-- SKILLS SECTION ENDS -->
+        <!-- TEAM SECTION BEGINS -->
         <section class="team">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <h2>Meet the team</h2>
+                <p class="desc">A proud group of individuals who came together in a perfect unity to present you with this.</p>
+                <div class="teamCards">
+                    <div class="teamMember">
+                        <img src="images/headshot-1.png" alt="photo of team member 1">
+                        <div class="socialIcons">
+                            <div class="icon icon1"></div>
+                            <div class="icon icon2"></div>
+                            <div class="icon icon3"></div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <img src="images/headshot-2.png" alt="photo of team member 2">
+                        <div class="socialIcons">
+                            <div class="icon icon1"></div>
+                            <div class="icon icon2"></div>
+                            <div class="icon icon3"></div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <img src="images/headshot-3.png" alt="photo of team member 3">
+                        <div class="socialIcons">
+                            <div class="icon icon1"></div>
+                            <div class="icon icon2"></div>
+                            <div class="icon icon3"></div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <img src="images/headshot-4.png" alt="photo of team member 4">
+                        <div class="socialIcons">
+                            <div class="icon icon1"></div>
+                            <div class="icon icon2"></div>
+                            <div class="icon icon3"></div>
+                        </div>
+                    </div> 
+                </div> <!-- cards container -->
+            </div> <!-- main wrapper -->
         </section>
+        <!-- TEAM SECTION ENDS -->
         <section id="portfolio"></section>
         <section id="blog">
             <div class="wrapper"></div>
