modifications and team section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Simpleflex</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700|Raleway:300,700" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 <body>
     <!-- HEADER STARTS -->
@@ -146,35 +147,59 @@
                     <div class="teamMember">
                         <img src="images/headshot-1.png" alt="photo of team member 1">
                         <div class="socialIcons">
-                            <div class="icon icon1"></div>
-                            <div class="icon icon2"></div>
-                            <div class="icon icon3"></div>
+                            <div class="icon facebook">
+                                <i class="fab fa-facebook-f fa-fw"></i>
+                            </div>
+                            <div class="icon icon2 twitter">
+                                <i class="fab fa-twitter fa-fw"></i>
+                            </div>
+                            <div class="icon pinterest">
+                                <i class="fab fa-pinterest-p fa-fw"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="teamMember">
                         <img src="images/headshot-2.png" alt="photo of team member 2">
                         <div class="socialIcons">
-                            <div class="icon icon1"></div>
-                            <div class="icon icon2"></div>
-                            <div class="icon icon3"></div>
+                            <div class="icon facebook">
+                                <i class="fab fa-facebook-f fa-fw"></i>
+                            </div>
+                            <div class="icon icon2 dribble">
+                                <i class="fab fa-dribbble fa-fw"></i>
+                            </div>
+                            <div class="icon pinterest">
+                                <i class="fab fa-pinterest-p fa-fw"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="teamMember">
                         <img src="images/headshot-3.png" alt="photo of team member 3">
                         <div class="socialIcons">
-                            <div class="icon icon1"></div>
-                            <div class="icon icon2"></div>
-                            <div class="icon icon3"></div>
+                            <div class="icon facebook">
+                                <i class="fab fa-facebook-f fa-fw"></i>
+                            </div>
+                            <div class="icon icon2 twitter">
+                                <i class="fab fa-twitter fa-fw"></i>
+                            </div>
+                            <div class="icon flickr">
+                                <i class="fab fa-flickr fa-fw"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="teamMember">
                         <img src="images/headshot-4.png" alt="photo of team member 4">
                         <div class="socialIcons">
-                            <div class="icon icon1"></div>
-                            <div class="icon icon2"></div>
-                            <div class="icon icon3"></div>
+                            <div class="icon twitter">
+                                <i class="fab fa-twitter fa-fw"></i>
+                            </div>
+                            <div class="icon icon2 google">
+                                <i class="fab fa-google-plus-g fa-fw"></i>
+                            </div>
+                            <div class="icon linkdin">
+                                <i class="fab fa-linkedin-in fa-fw"></i>
+                            </div>
                         </div>
-                    </div> 
+                    </div> <!-- team member container -->
                 </div> <!-- cards container -->
             </div> <!-- main wrapper -->
         </section>
