up to portfolio section styled, blog html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- HEADER STARTS -->
     <header>
-        <div class="wrapper wrapHeader">
+        <div class="wrapHeader">
             <div class="logoHeader">
                 <img src="images/logo.png" alt="simpleflex logo in cursive script">
             </div>
@@ -202,11 +202,175 @@
                     </div> <!-- team member container -->
                 </div> <!-- cards container -->
             </div> <!-- main wrapper -->
+            <!-- lower section with colored background and icons -->
+            <div class="greenSection">
+                <div class="wrapper">
+                    <div class="iconCards">
+                        <div class="card card1">
+                            <div class="cardImg">
+                                <img src="images/icon-1.png" alt="outline of the head and shoulders of a person">
+                            </div>
+                            <div class="cardBottom">
+                                <h5>2500</h5>
+                                <p class="buttonWhite">happy clients</p>
+                            </div>
+                        </div>
+                        <div class="card card2">
+                            <div class="cardImg">
+                                <img src="images/icon-2.png" alt="outline of a lightbulb" class="lightbulb">
+                            </div>
+                            <div class="cardBottom">
+                                <h5>650</h5>
+                                <p class="buttonWhite">projects made</p>
+                            </div>
+                        </div>
+                        <div class="card card3">
+                            <div class="cardImg">
+                                <img src="images/icon-3.png" alt="outline of a paper airplane">
+                            </div>
+                            <div class="cardBottom">
+                                <h5>5780</h5>
+                                <p class="buttonWhite">Letters sent</p>
+                            </div>
+                        </div>
+                        <div class="card card4">
+                            <div class="cardImg">
+                                <img src="images/icon-4.png" alt="outline of a pencil">
+                            </div>
+                            <div class="cardBottom">
+                                <h5>3400</h5>
+                                <p class="buttonWhite">briefs wrote</p>
+                            </div>
+                        </div>
+                    </div> <!-- card container -->
+                </div> <!-- wrapper -->
+            </div> <!-- lower green section ends -->
         </section>
         <!-- TEAM SECTION ENDS -->
-        <section id="portfolio"></section>
+        <!-- PORTFOLIO SECTION STARTS -->
+        <section id="portfolio">
+            <div class="portfolioTop">
+                <h2>Our portfolio</h2>
+                <p class="desc">Sanctus sea sed takimata ut vero voluptua. Stet clita kasd gubergren, no sea takimata sanctus est.</p>
+                <nav class="portfolioNav">
+                    <ul>
+                        <li><a href="#">All</a></li>
+                        <li><a href="#">videos</a></li>
+                        <li><a href="#">illustrations</a></li>
+                        <li><a href="#">print</a></li>
+                        <li><a href="#">misc</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="portfolioGallery">
+                <div class="galleryItem gallery1">
+                    <figure>
+                        <img src="images/portfolio-1b.png" alt="a table covered in books and pictures as well as candle with a yellow blanket beside it">
+                        <figcaption>kopazito</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery2">
+                    <figure>
+                        <img src="images/portfolio-2.png" alt="photo of an open silver macBook viewing a fashion website">
+                        <figcaption>i love picles</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery3">
+                    <figure>
+                        <img src="images/portfolio-3.png" alt="photo of a modern red and blue and yellow painting">
+                        <figcaption>shotmen</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery4">
+                    <figure>
+                        <img src="images/portfolio-4.png" alt="close up photo of a hand using a stylus to edit a picture on a tablet">
+                        <figcaption>Voodoo</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery5">
+                    <figure>
+                        <img src="images/portfolio-5.png" alt="picture of an intricate coloring book and colored pencils">
+                        <figcaption>barbapapa</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery6">
+                    <figure>
+                        <img src="images/portfolio-6.png" alt="picture of a large brick-wall mural of a geisha">
+                        <figcaption>Ron weasley</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery7">
+                    <figure>
+                        <img src="images/portfolio-7.png" alt="photo of a hand holding a stylus and using a tablet on a white table">
+                        <figcaption>My diamond returns!</figcaption>
+                    </figure>
+                </div>
+                <div class="galleryItem gallery8">
+                    <figure>
+                        <img src="images/portfolio-8.png" alt="a close up picture of lost of black and white cartoon stickers">
+                        <figcaption>i can pay my bills</figcaption>
+                    </figure>
+                </div>
+            </div>
+            <div class="portfolioBottom">
+                <button type="button" class="buttonWhite">Load More</button>
+            </div>
+        </section>
+        <!-- PORTFOLIO SECTION ENDS -->
         <section id="blog">
-            <div class="wrapper"></div>
+            <div class="wrapper">
+                <h2>Our blog</h2>
+                <p class="desc">Latest from our blog, nam liber tempor cum soluta nobis eleifend option congue nihil.</p>
+                <div class="blogPreviews">
+                    <div class="blogLeft">
+                        <div class="image">
+                            <img src="images/blog-1.png" alt="photo of a pad of paper and black and white cartoon drawings">
+                        </div>
+                        <div class="description">
+                            <h4>post with image</h4>
+                            <h5>Dec 29, 2013</h5>
+                            <p class="desc">At vero eos et accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum.</p>
+                            <div class="socialIcons">
+                                <div class="fbIcon"></div>
+                                <div class="twitterIcon"></div>
+                                <div class="gIcon"></div>
+                            </div>
+                        </div>
+                    </div> <!-- left side finishes -->
+                    <div class="blogRight">
+                        <div class="rightTop">
+                            <div class="image">
+                                <img src="images/blog-2.png" alt="photo of wooden hand">
+                            </div>
+                            <div class="description">
+                                <h4>post with video</h4>
+                                <h5>Dec 29, 2013</h5>
+                                <p class="desc">At vero eos et accusam et justo duo dolores et ea rebum quis aute.</p>
+                                <div class="socialIcons">
+                                    <div class="fbIcon"></div>
+                                    <div class="twitterIcon"></div>
+                                    <div class="gIcon"></div>
+                                </div>
+                            </div>
+                        </div> <!-- top right preview finishes -->
+                        <div class="rightBottom">
+                            <div class="image">
+                                <img src="images/blog-3.png" alt="photo of a hand writing with a stylus on a tablet">
+                            </div>
+                            <div class="description">
+                                <h4>post with slider</h4>
+                                <h5>Dec 29, 2013</h5>
+                                <p class="desc">Accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum.</p>
+                                <div class="socialIcons">
+                                    <div class="fbIcon"></div>
+                                    <div class="twitterIcon"></div>
+                                    <div class="gIcon"></div>
+                                </div>
+                            </div>
+                        </div> <!-- bottom right finishes -->
+                    </div> <!-- right side wrapper -->
+                </div> <!-- blog preview wrapper -->
+            </div> <!-- main wrapper -->
         </section>
         <section class="location">
             <div class="sectionTop">
