added blog section

--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
             </div>
         </section>
         <!-- PORTFOLIO SECTION ENDS -->
+        <!-- BLOG SECTION STARTS -->
         <section id="blog">
             <div class="wrapper">
                 <h2>Our blog</h2>
@@ -329,11 +330,19 @@
                         <div class="description">
                             <h4>post with image</h4>
                             <h5>Dec 29, 2013</h5>
-                            <p class="desc">At vero eos et accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum.</p>
-                            <div class="socialIcons">
-                                <div class="fbIcon"></div>
-                                <div class="twitterIcon"></div>
-                                <div class="gIcon"></div>
+                            <p class="descBlog">At vero eos et accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum...</p>
+                            <div class="blogIcons">
+                                <ul>
+                                    <li>
+                                        <a href="#" class="bIcon bFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="bIcon bTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="bIcon bGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div> <!-- left side finishes -->
@@ -345,11 +354,19 @@
                             <div class="description">
                                 <h4>post with video</h4>
                                 <h5>Dec 29, 2013</h5>
-                                <p class="desc">At vero eos et accusam et justo duo dolores et ea rebum quis aute.</p>
-                                <div class="socialIcons">
-                                    <div class="fbIcon"></div>
-                                    <div class="twitterIcon"></div>
-                                    <div class="gIcon"></div>
+                                <p class="descBlog">At vero eos et accusam et justo duo dolores et ea rebum quis aute...</p>
+                                <div class="blogIcons">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="bIcon bFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="bIcon bTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="bIcon bGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div> <!-- top right preview finishes -->
@@ -360,24 +377,40 @@
                             <div class="description">
                                 <h4>post with slider</h4>
                                 <h5>Dec 29, 2013</h5>
-                                <p class="desc">Accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum.</p>
-                                <div class="socialIcons">
-                                    <div class="fbIcon"></div>
-                                    <div class="twitterIcon"></div>
-                                    <div class="gIcon"></div>
+                                <p class="descBlog">Accusam et justo duo dolores et ea rebum quis aute iure reprehenderit in voluptate velit esse cillum...</p>
+                                <div class="blogIcons">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="bIcon bFacebook"><i class="fab fa-facebook-f fa-fw"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="bIcon bTwitter"><i class="fab fa-twitter fa-fw"></i></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="bIcon bGoogle"><i class="fab fa-google-plus-g fa-fw"></i></a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div> <!-- bottom right finishes -->
                     </div> <!-- right side wrapper -->
                 </div> <!-- blog preview wrapper -->
+                <div class="blogBottom">
+                    <button type="button" class="buttonWhite">View all</button>
+                </div>
             </div> <!-- main wrapper -->
         </section>
         <section class="location">
             <div class="sectionTop">
-                <div class="wrapper"></div>
-                <!-- ^maybe? -->
+                <div class="wrapper">
+                    <h4>+91 544 567 8943</h4>
+                    <h1>info@simpleflex.com</h1>
+                    <p>8605 Santa monica blvd, los angeles, california 97845, US</p>
+                </div>
             </div>
-            <div class="sectionBottom"></div>
+            <div class="sectionBottom">
+                <img src="images/map.png" alt="">
+            </div>
         </section>
         <section id="contact">
             <div class="wrapper"></div>
